notes section & scrollbar fix

--- a/src/window.scss
+++ b/src/window.scss
@@ -8,12 +8,16 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     .nav{
-        position: relative;
+        position: sticky;
+        top: 0;
+        z-index: 10;
+        background-color: black;
         display: flex;
         align-items: center;
         padding: 5px 10px;
         border-bottom: 1px solid gray;
         gap: 10px;
+        
 
         .dots{
             display: flex;
@@ -51,4 +55,7 @@
     }
 
 }
+}
+*::-webkit-scrollbar{
+    width: 8px;
 }
